v0.19.0/_sources/gallery/symbols/scatter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/symbols/scatter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_symbols_scatter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_symbols_scatter.py:


Scatter plots with a legend
===========================

To create a scatter plot with a legend one may use a loop and create one
scatter plot per item to appear in the legend and set the label accordingly.

Modified from the matplotlib example:
https://matplotlib.org/stable/gallery/lines_bars_and_markers/scatter_with_legend.html

.. GENERATED FROM PYTHON SOURCE LINES 13-52



.. image-sg:: /gallery/symbols/images/sphx_glr_scatter_001.png
   :alt: scatter
   :srcset: /gallery/symbols/images/sphx_glr_scatter_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import numpy as np
    import pygmt
    from pygmt.params import Axis, Frame

    rng = np.random.default_rng(seed=19680801)
    n = 200  # number of random data points

    fig = pygmt.Figure()
    fig.basemap(
        region=[-1, 1, -1, 1],
        projection="X10c/10c",
        frame=Frame(
            axes="WSrt",
            xaxis=Axis(annot=0.5, tick=True, grid=True),
            yaxis=Axis(annot=0.5, tick=True, grid=True),
        ),
    )
    for fill in ["gray73", "darkorange", "slateblue"]:
        # Generate standard normal distributions centered on 0
        # with standard deviations of 1
        x = rng.normal(loc=0, scale=0.5, size=n)  # random x data
        y = rng.normal(loc=0, scale=0.5, size=n)  # random y data
        size = rng.normal(loc=0, scale=0.5, size=n) * 0.5  # random size, in cm

        # plot data points as circles (style="c"), with different sizes
        fig.plot(
            x=x,
            y=y,
            style="c",
            size=size,
            fill=fill,
            # Set the legend label,
            # and set the symbol size to be 0.25 cm (+S0.25c) in legend
            label=f"{fill}+S0.25c",
            transparency=50,  # set transparency level for all symbols
        )

    fig.legend(transparency=30)  # set transparency level for legends
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.235 seconds)


.. _sphx_glr_download_gallery_symbols_scatter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: scatter.ipynb <scatter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: scatter.py <scatter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: scatter.zip <scatter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
